# apps/backend/src/swagger.yaml
@@ -1,17 +1,17 @@
-openapi: '3.0.0'
+openapi: "3.0.0"
 info:
-  title: 'Anti-Grindr'
-  version: '0.0.1'
-  description: 'An alternative to Grindr, which abuses its position on the market to suck off more money from users.'
+  title: "Anti-Grindr"
+  version: "0.0.1"
+  description: "An alternative to Grindr, which abuses its position on the market to suck off more money from users."
 
 servers:
-  - url: 'http://localhost:5100'
-    description: 'Development server'
+  - url: "http://localhost:5100"
+    description: "Development server"
 
 paths:
-  '/api/user/create':
+  "/api/user/create":
     post:
-      summary: 'Create a new user'
+      summary: "Create a new user"
       tags:
         - User
       requestBody:
@@ -23,19 +23,19 @@ paths:
               properties:
                 email:
                   type: string
-                  example: 'john@example.com'
+                  example: "john@example.com"
                 password:
                   type: string
-                  example: 'password123'
+                  example: "password123"
       responses:
         201:
-          description: 'User created'
+          description: "User created"
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/User'
+                $ref: "#/components/schemas/User"
         400:
-          description: 'Bad request'
+          description: "Bad request"
           content:
             application/json:
               schema:
@@ -43,30 +43,30 @@ paths:
                 properties:
                   error:
                     type: string
-                    example: 'Invalid input data'
+                    example: "Invalid input data"
 
-  '/api/user/{id}':
+  "/api/user/{id}":
     get:
-      summary: 'Get user by ID'
+      summary: "Get user by ID"
       tags:
         - User
       parameters:
         - name: id
           in: path
           required: true
-          description: 'User ID'
+          description: "User ID"
           schema:
             type: string
             example: cZx909OsA1kaXhsaQ
       responses:
         200:
-          description: 'User details'
+          description: "User details"
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/User'
+                $ref: "#/components/schemas/User"
         401:
-          description: 'Unauthorized'
+          description: "Unauthorized"
           content:
             application/json:
               schema:
@@ -74,9 +74,9 @@ paths:
                 properties:
                   error:
                     type: string
-                    example: 'Unauthorized'
+                    example: "Unauthorized"
         403:
-          description: 'Forbidden'
+          description: "Forbidden"
           content:
             application/json:
               schema:
@@ -84,9 +84,9 @@ paths:
                 properties:
                   error:
                     type: string
-                    example: 'Forbidden'
+                    example: "Forbidden"
         404:
-          description: 'User not found'
+          description: "User not found"
           content:
             application/json:
               schema:
@@ -94,11 +94,11 @@ paths:
                 properties:
                   error:
                     type: string
-                    example: 'User not found'
+                    example: "User not found"
 
-  '/api/user/{id}/update-email':
+  "/api/user/{id}/update-email":
     patch:
-      summary: 'Update user email'
+      summary: "Update user email"
       tags:
         - User
       requestBody:
@@ -110,19 +110,19 @@ paths:
               properties:
                 newEmail:
                   type: string
-                  example: 'newemail@example.com'
+                  example: "newemail@example.com"
                 actualPassword:
                   type: string
-                  example: 'password123'
+                  example: "password123"
       responses:
         200:
-          description: 'Email updated'
+          description: "Email updated"
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/User'
+                $ref: "#/components/schemas/User"
         400:
-          description: 'Bad request'
+          description: "Bad request"
           content:
             application/json:
               schema:
@@ -130,9 +130,9 @@ paths:
                 properties:
                   error:
                     type: string
-                    example: 'Password required / Passwords are not match'
+                    example: "Password required / Passwords are not match"
         401:
-          description: 'Unauthorized'
+          description: "Unauthorized"
           content:
             application/json:
               schema:
@@ -140,9 +140,9 @@ paths:
                 properties:
                   error:
                     type: string
-                    example: 'Unauthorized'
+                    example: "Unauthorized"
         403:
-          description: 'Forbidden'
+          description: "Forbidden"
           content:
             application/json:
               schema:
@@ -150,9 +150,9 @@ paths:
                 properties:
                   error:
                     type: string
-                    example: 'Forbidden'
+                    example: "Forbidden"
         404:
-          description: 'User not found'
+          description: "User not found"
           content:
             application/json:
               schema:
@@ -160,11 +160,11 @@ paths:
                 properties:
                   error:
                     type: string
-                    example: 'User not found'
+                    example: "User not found"
 
-  '/api/user/{id}/update-password':
+  "/api/user/{id}/update-password":
     patch:
-      summary: 'Update user password'
+      summary: "Update user password"
       tags:
         - User
       requestBody:
@@ -176,19 +176,19 @@ paths:
               properties:
                 actualPassword:
                   type: string
-                  example: 'password123'
+                  example: "password123"
                 newPassword:
                   type: string
-                  example: 'newpassword123'
+                  example: "newpassword123"
       responses:
         200:
-          description: 'Password updated'
+          description: "Password updated"
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/User'
+                $ref: "#/components/schemas/User"
         400:
-          description: 'Bad request'
+          description: "Bad request"
           content:
             application/json:
               schema:
@@ -196,9 +196,9 @@ paths:
                 properties:
                   error:
                     type: string
-                    example: 'Password too weak / Password required / Passwords are not match'
+                    example: "Password too weak / Password required / Passwords are not match"
         401:
-          description: 'Unauthorized'
+          description: "Unauthorized"
           content:
             application/json:
               schema:
@@ -206,9 +206,9 @@ paths:
                 properties:
                   error:
                     type: string
-                    example: 'Unauthorized'
+                    example: "Unauthorized"
         403:
-          description: 'Forbidden'
+          description: "Forbidden"
           content:
             application/json:
               schema:
@@ -216,9 +216,9 @@ paths:
                 properties:
                   error:
                     type: string
-                    example: 'Forbidden'
+                    example: "Forbidden"
         404:
-          description: 'User not found'
+          description: "User not found"
           content:
             application/json:
               schema:
@@ -226,7 +226,7 @@ paths:
                 properties:
                   error:
                     type: string
-                    example: 'User not found'
+                    example: "User not found"
 
 components:
   schemas:
@@ -238,10 +238,10 @@ components:
           example: cZx909OsA1kaXhsaQ
         email:
           type: string
-          example: 'john@example.com'
+          example: "john@example.com"
         name:
           type: string
-          example: 'john_doe'
+          example: "john_doe"
         age:
           type: integer
           example: 25
@@ -250,7 +250,7 @@ components:
             maximum: 99
         created_at:
           type: datetime
-          example: '2024-01-25T10:30:00Z'
+          example: "2024-01-25T10:30:00Z"
         updated_at:
           type: datetime
-          example: '2024-01-25T14:45:30+02:00'
+          example: "2024-01-25T14:45:30+02:00"
