# apps/backend/src/user/user.router.ts
@@ -1,42 +1,42 @@
-import { authorization, validate } from '@/lib/middlewares.ts'
-import * as AuthController from '@/user/user.controller.ts'
+import { authorization, validate } from "@/lib/middlewares.ts";
+import * as AuthController from "@/user/user.controller.ts";
 import {
   CreateUserSchema,
   DeleteAccountSchema,
   SignInUserSchema,
   UpdateEmailSchema,
-  UpdatePasswordSchema
-} from '@/user/user.schemas.ts'
-import { Router } from 'express'
-import { AnyZodObject } from 'zod'
+  UpdatePasswordSchema,
+} from "@/user/user.schemas.ts";
+import { Router } from "express";
+import { AnyZodObject } from "zod";
 
-const authRouter: Router = Router()
+const authRouter: Router = Router();
 
-authRouter.post('/sign-up', validate(CreateUserSchema), AuthController.signUp)
-authRouter.post('/sign-in', validate(SignInUserSchema), AuthController.signIn)
-authRouter.post('/sign-out', authorization, AuthController.signOut)
-authRouter.post('/refresh-token', authorization, AuthController.refreshToken)
+authRouter.post("/sign-up", validate(CreateUserSchema), AuthController.signUp);
+authRouter.post("/sign-in", validate(SignInUserSchema), AuthController.signIn);
+authRouter.post("/sign-out", authorization, AuthController.signOut);
+authRouter.post("/refresh-token", authorization, AuthController.refreshToken);
 
-authRouter.get('/:id', authorization, AuthController.getUser)
+authRouter.get("/:id", authorization, AuthController.getUser);
 
 authRouter.patch(
-  '/:id/update-email',
+  "/:id/update-email",
   authorization,
   validate(UpdateEmailSchema),
-  AuthController.updateEmail
-)
+  AuthController.updateEmail,
+);
 authRouter.patch(
-  '/:id/update-password',
+  "/:id/update-password",
   authorization,
   validate(UpdatePasswordSchema as unknown as AnyZodObject),
-  AuthController.updatePassword
-)
+  AuthController.updatePassword,
+);
 
 authRouter.delete(
-  '/:id',
+  "/:id",
   authorization,
   validate(DeleteAccountSchema),
-  AuthController.deleteAccount
-)
+  AuthController.deleteAccount,
+);
 
-export default authRouter
+export default authRouter;
